--- a/style/css/main.css
+++ b/style/css/main.css
@@ -340,144 +340,121 @@ h4 {
 * * * * * * * * * * * * * * * * * * * * * * *  */
 .App {
   width: 100vw;
-  max-width: 100%;
   height: 100vh;
+  max-width: 100%;
+  max-height: 100vh;
 }
-.App .btn {
-  box-shadow: none;
-  cursor: pointer;
-  border: none;
-}
-
 .App-center {
-  width: 90%;
+  width: 100%;
   height: 100%;
-  margin: 0 auto;
-  padding: 1rem;
   display: flex;
   flex-direction: column-reverse;
-  justify-content: space-evenly;
 }
-.App-center .App-input,
-.App-center .App-output {
-  min-width: 350px;
-  flex: 0 0 45%;
-  border: 1px solid #c7c7cc;
-  border-radius: 0.5rem;
+.App-input {
+  flex: 0 0 50%;
 }
-
-.App-title {
-  width: 100%;
-  height: 10%;
-  background-color: #e5e5ea;
-  border-bottom: 1px solid #c7c7cc;
-  display: flex;
-  align-items: center;
-  justify-content: space-around;
-  border-top-left-radius: 0.5rem;
-  border-top-right-radius: 0.5rem;
-}
-.App-title span {
-  color: #8e8e93;
-  cursor: pointer;
-}
-.App-title span:hover {
-  text-decoration: underline;
-}
-
-.App-body {
+.App-input #input {
+  width: 90%;
   height: 90%;
-}
-
-.App-input > .App-body > form {
-  width: 100%;
-  margin: 0 auto;
-  height: 100%;
+  position: relative;
+  left: 5%;
+  top: 5%;
   text-align: center;
 }
-.App-input > .App-body > form input,
-.App-input > .App-body > form textarea {
-  width: 90%;
-  margin: 0.5rem 0;
-  padding: 0.5rem 1rem;
-  font-family: sans-serif;
-  border-radius: 0.5rem;
-  border: 1px solid #e5e5ea;
-  transition: all 0.3s ease-in-out;
+.App-input #input input,
+.App-input #input textarea {
+  padding: 0.5rem;
+  width: 100%;
+  margin: 0.25rem 0;
+  border-radius: 0.25rem;
+  border: 2px solid #c7c7cc;
+}
+.App-input #input input:focus,
+.App-input #input textarea:focus {
+  border: 2px solid #007aff;
+}
+.App-input #input textarea {
   resize: none;
-}
-.App-input > .App-body > form input:focus,
-.App-input > .App-body > form textarea:focus {
-  border: 1px solid #007aff;
-}
-.App-input > .App-body > form textarea {
   height: 150px;
+  font-family: sans-serif;
 }
-.App-input > .App-body > form input[type=submit] {
+.App-input #input input[type=submit] {
+  cursor: pointer;
   border: none;
 }
-
-.App-output > .App-body {
-  overflow-y: hidden;
+.App-output {
+  flex: 0 0 50%;
 }
-
-.App-output > .App-body > #output {
+.App-output #output {
+  height: 90%;
+  width: 90%;
+  position: relative;
+  top: 5%;
+  left: 5%;
+  background-color: #c7c7cc;
+  border-radius: 0.25rem;
   overflow-y: auto;
-  height: 100%;
+  overflow-x: hidden;
 }
-.App-output > .App-body > #output li {
-  text-indent: 0;
+.App-output #output li {
+  border-radius: 0.25rem;
   display: flex;
-  align-items: center;
   justify-content: space-between;
+  align-items: center;
   flex-wrap: wrap;
-  background-color: #f2f2f7;
-  border-bottom: 1px solid #c7c7cc;
+  background-color: #d1d1d6;
 }
-.App-output > .App-body > #output li .remove {
-  background-color: #ff3b30;
-}
-.App-output > .App-body > #output li .details {
+.App-output #output li .details {
   display: none;
 }
-.App-output > .App-body > #output li .dropdown:checked ~ .details {
+.App-output #output li .dropdown:checked ~ .details {
   display: block;
-  flex: 0 0 98%;
-  margin: 0 auto;
-  padding: 0.5rem;
+  flex-basis: 98%;
+  margin-left: 1%;
+  background-color: #aeaeb2;
+  border-radius: 0.25rem;
+}
+.App-output #output li .remove {
+  background-color: #ff3b30;
+}
+.App-title {
+  width: 100%;
+  height: 2.5rem;
+  background-color: #8e8e93;
+}
+.App-title h4 {
+  text-align: center;
+  color: #f8f8f8;
+  margin: 0;
+}
+.App-body {
+  height: calc(100% - 2.5rem);
   background-color: #e5e5ea;
 }
 
-@media screen and (min-width: 992px) {
-  .App {
-    height: 50vh;
-  }
-
+@media screen and (min-width: 768px) {
   .App-center {
     flex-direction: row;
   }
 }
-.App.dark > .App-center .App-title {
-  background-color: #161618;
-  border-bottom: 1px solid #48484a;
-}
-.App.dark > .App-center .App-input,
-.App.dark > .App-center .App-output {
-  border: 1px solid #48484a;
-}
-.App.dark > .App-center .App-input {
-  color: #f8f8f8;
-}
-.App.dark > .App-center .App-input textarea,
-.App.dark > .App-center .App-input input[type=text] {
-  background-color: #1c1c1e;
-  border: 1px solid #2c2c2e;
-  color: #f8f8f8;
-}
-.App.dark > .App-center .App-output > .App-body > #output li {
-  background-color: #1c1c1e;
-  border-bottom: 1px solid #48484a;
-}
-.App.dark > .App-center .App-output > .App-body > #output li .details {
-  background-color: #3a3a3c;
+@media screen and (min-width: 1170px) {
+  .App-center {
+    width: 90%;
+    height: 90%;
+    position: relative;
+    top: 5%;
+    left: 5%;
+    justify-content: space-evenly;
+  }
+  .App-center .App-input,
+.App-center .App-output {
+    flex: 0 0 45%;
+    box-shadow: 0 5px 15px #aeaeb2;
+  }
+  .App-center .App-input #input input,
+.App-center .App-input #input textarea,
+.App-center .App-output #input input,
+.App-center .App-output #input textarea {
+    max-width: 500px;
+  }
 }
