--- a/style/css/main.css
+++ b/style/css/main.css
@@ -340,14 +340,15 @@ h4 {
 * * * * * * * * * * * * * * * * * * * * * * *  */
 .App {
   width: 100vw;
-  height: 100vh;
+  height: 95vh;
   max-width: 100%;
-  max-height: 100vh;
+  max-height: fit-content;
 }
 .App-center {
   width: 100%;
   height: 100%;
   display: flex;
+  flex-wrap: wrap;
   flex-direction: column-reverse;
 }
 .App-input {
@@ -381,6 +382,9 @@ h4 {
 .App-input #input input[type=submit] {
   cursor: pointer;
   border: none;
+}
+.App-help {
+  flex: 0 0 50%;
 }
 .App-output {
   flex: 0 0 50%;
@@ -431,6 +435,13 @@ h4 {
   height: calc(100% - 2.5rem);
   background-color: #e5e5ea;
 }
+.App-body p {
+  margin: 0;
+}
+
+.hidden {
+  display: none;
+}
 
 @media screen and (min-width: 768px) {
   .App-center {
@@ -457,4 +468,49 @@ h4 {
 .App-center .App-output #input textarea {
     max-width: 500px;
   }
+}
+/* * * * * * * * * * * * * * * * * * * * * * * *
+*
+*   Taskbar stylesheet                   V0.1
+*   
+*   Andrew Tuček                     7.3.2022
+*
+* * * * * * * * * * * * * * * * * * * * * * *  */
+.taskbar {
+  width: 100vw;
+  max-width: 100%;
+  height: 5vh;
+  background-color: #c7c7cc;
+  box-shadow: 0 5px 15px #aeaeb2;
+}
+.taskbar-center {
+  width: 95%;
+  height: 95%;
+  position: relative;
+  top: 2.5%;
+  left: 2.5%;
+  color: #f8f8f8;
+  display: flex;
+  align-items: center;
+  justify-content: space-between;
+}
+.taskbar-center .apps {
+  display: flex;
+  flex: 0 0 80%;
+  background-color: #8e8e93;
+}
+.taskbar-center .apps-app {
+  cursor: pointer;
+  min-width: 100px;
+  background-color: #aeaeb2;
+  margin-right: 1%;
+  text-align: center;
+  user-select: none;
+}
+.taskbar-center .apps-app:hover {
+  background-color: #c7c7cc;
+}
+.taskbar-center .time {
+  flex: 0 0 20%;
+  text-align: center;
 }
