--- a/style/scss/sections/_application.scss
+++ b/style/scss/sections/_application.scss
@@ -7,14 +7,15 @@
 * * * * * * * * * * * * * * * * * * * * * * *  */
 .App {
   width: 100vw;
-  height: 100vh;
+  height: 95vh;
   max-width: 100%;
-  max-height: 100vh;
+  max-height: fit-content;
   // container
   &-center {
     width: 100%;
     height: 100%;
     display: flex;
+    flex-wrap: wrap;
     flex-direction: column-reverse;
   }
   //input
@@ -49,6 +50,10 @@
         border: none;
       }
     }
+  }
+  //help
+  &-help {
+    flex: 0 0 50%;
   }
   //output
   &-output {
@@ -102,7 +107,14 @@
   &-body {
     height: calc(100% - 2.5rem);
     background-color: $gray-light5;
+    p {
+      margin: 0;
+    }
   }
+}
+
+.hidden {
+  display: none;
 }
 
 @media screen and (min-width: 768px) {
